Fix spacing for hamburger navigation

--- a/css/main.css
+++ b/css/main.css
@@ -221,11 +221,18 @@ h1 {
   display: block;
 }
 
+.nav-open {
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  z-index: 3;
+}
+
 .nav-close {
   display: none;
   position: fixed;
-  top: 10px;
-  right: 10px;
+  top: 15px;
+  right: 15px;
   z-index: 3;
 }
 
